--- a/Certification App/Src/EditorState/New Certifications request approval.editorstate.json
+++ b/Certification App/Src/EditorState/New Certifications request approval.editorstate.json
@@ -921,7 +921,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_173",
-      "ParentIndex": 10,
+      "ParentIndex": 0,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -1332,7 +1332,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_174",
-      "ParentIndex": 17,
+      "ParentIndex": 7,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -2147,7 +2147,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_176",
-      "ParentIndex": 25,
+      "ParentIndex": 19,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -2572,7 +2572,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_90",
-      "ParentIndex": 12,
+      "ParentIndex": 0,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -2997,7 +2997,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_91",
-      "ParentIndex": 19,
+      "ParentIndex": 7,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -3408,7 +3408,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_92",
-      "ParentIndex": 9,
+      "ParentIndex": 8,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -3833,7 +3833,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_93",
-      "ParentIndex": 27,
+      "ParentIndex": 21,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -18978,7 +18978,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_129",
-      "ParentIndex": 16,
+      "ParentIndex": 6,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -19389,7 +19389,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_130",
-      "ParentIndex": 22,
+      "ParentIndex": 15,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -19800,7 +19800,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_131",
-      "ParentIndex": 26,
+      "ParentIndex": 23,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -20211,7 +20211,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_66",
-      "ParentIndex": 18,
+      "ParentIndex": 6,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -20629,7 +20629,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_67",
-      "ParentIndex": 24,
+      "ParentIndex": 17,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -21047,7 +21047,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_68",
-      "ParentIndex": 28,
+      "ParentIndex": 25,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -26323,7 +26323,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon11_21",
-      "ParentIndex": 13,
+      "ParentIndex": 1,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -26570,7 +26570,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon11_42",
-      "ParentIndex": 11,
+      "ParentIndex": 1,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -26803,7 +26803,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon12_9",
-      "ParentIndex": 20,
+      "ParentIndex": 11,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -27029,7 +27029,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon13_8",
-      "ParentIndex": 15,
+      "ParentIndex": 5,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -28214,7 +28214,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon22_21",
-      "ParentIndex": 21,
+      "ParentIndex": 10,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -28468,7 +28468,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon22_42",
-      "ParentIndex": 19,
+      "ParentIndex": 10,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -28729,7 +28729,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon23_21",
-      "ParentIndex": 26,
+      "ParentIndex": 19,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -28976,7 +28976,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon23_42",
-      "ParentIndex": 24,
+      "ParentIndex": 17,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -29223,7 +29223,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon29_21",
-      "ParentIndex": 17,
+      "ParentIndex": 5,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -29477,7 +29477,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon29_42",
-      "ParentIndex": 14,
+      "ParentIndex": 4,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -29717,7 +29717,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon32_21",
-      "ParentIndex": 3,
+      "ParentIndex": 12,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -29957,7 +29957,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon32_42",
-      "ParentIndex": 3,
+      "ParentIndex": 12,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -30873,7 +30873,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon5_5",
-      "ParentIndex": 22,
+      "ParentIndex": 11,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -31099,7 +31099,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon6_5",
-      "ParentIndex": 16,
+      "ParentIndex": 4,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -31971,7 +31971,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image12_21",
-      "ParentIndex": 2,
+      "ParentIndex": 23,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -32205,7 +32205,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image12_44",
-      "ParentIndex": 1,
+      "ParentIndex": 21,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -33329,7 +33329,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image5_31",
-      "ParentIndex": 14,
+      "ParentIndex": 2,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -33565,7 +33565,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image5_32",
-      "ParentIndex": 25,
+      "ParentIndex": 18,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -33794,7 +33794,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image5_68",
-      "ParentIndex": 12,
+      "ParentIndex": 2,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -34030,7 +34030,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image5_69",
-      "ParentIndex": 23,
+      "ParentIndex": 16,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -34273,7 +34273,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image6_21",
-      "ParentIndex": 20,
+      "ParentIndex": 9,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -34516,7 +34516,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image6_42",
-      "ParentIndex": 18,
+      "ParentIndex": 9,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -35071,7 +35071,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image7_39",
-      "ParentIndex": 23,
+      "ParentIndex": 13,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -35314,7 +35314,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image7_40",
-      "ParentIndex": 5,
+      "ParentIndex": 20,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -35557,7 +35557,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image7_82",
-      "ParentIndex": 21,
+      "ParentIndex": 13,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -35800,7 +35800,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image7_83",
-      "ParentIndex": 4,
+      "ParentIndex": 18,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -36036,7 +36036,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image8_23",
-      "ParentIndex": 4,
+      "ParentIndex": 26,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -36272,7 +36272,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image8_46",
-      "ParentIndex": 2,
+      "ParentIndex": 24,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -36501,7 +36501,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image9_21",
-      "ParentIndex": 1,
+      "ParentIndex": 28,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -36730,7 +36730,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image9_42",
-      "ParentIndex": 0,
+      "ParentIndex": 26,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -39860,7 +39860,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label5_22",
-      "ParentIndex": 0,
+      "ParentIndex": 14,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -41602,7 +41602,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label6_21",
-      "ParentIndex": 11,
+      "ParentIndex": 15,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -47028,7 +47028,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_108",
-      "ParentIndex": 15,
+      "ParentIndex": 3,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -47446,7 +47446,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_109",
-      "ParentIndex": 6,
+      "ParentIndex": 16,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -47850,7 +47850,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_110",
-      "ParentIndex": 10,
+      "ParentIndex": 22,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -48268,7 +48268,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_111",
-      "ParentIndex": 7,
+      "ParentIndex": 24,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -48694,7 +48694,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_112",
-      "ParentIndex": 8,
+      "ParentIndex": 27,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -49110,7 +49110,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_213",
-      "ParentIndex": 13,
+      "ParentIndex": 3,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -49521,7 +49521,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_214",
-      "ParentIndex": 5,
+      "ParentIndex": 14,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -49918,7 +49918,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_215",
-      "ParentIndex": 9,
+      "ParentIndex": 20,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -50329,7 +50329,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_216",
-      "ParentIndex": 6,
+      "ParentIndex": 22,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -50748,7 +50748,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_217",
-      "ParentIndex": 7,
+      "ParentIndex": 25,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -57072,7 +57072,14 @@
       "ControlPropertyState": [
         "Live",
         "Overflow",
-        "Text",
+        {
+          "AFDDataSourceName": "",
+          "AutoRuleBindingEnabled": false,
+          "AutoRuleBindingString": "ThisItem.Title",
+          "InvariantPropertyName": "Text",
+          "IsLockable": false,
+          "NameMapSourceSchema": "?"
+        },
         "Role",
         {
           "AFDDataSourceName": "",
