--- a/Certification App/Src/Ask_Oues_Ans_Admin.fx.yaml
+++ b/Certification App/Src/Ask_Oues_Ans_Admin.fx.yaml
@@ -1525,7 +1525,7 @@ Ask_Oues_Ans_Admin As screen:
                                 Fill: =RGBA(241, 244, 249, 1)
                                 Height: =105
                                 Overflow: =Overflow.Scroll
-                                Size: =12
+                                Size: =10
                                 Text: =If(IsBlank(varSelectedQn_Admin.Description),"No Description",varSelectedQn_Admin.Description)
                                 Width: =585
                                 X: =148
@@ -1539,7 +1539,7 @@ Ask_Oues_Ans_Admin As screen:
                                 Fill: =RGBA(213, 39, 26, 1)
                                 FontWeight: =FontWeight.Semibold
                                 Height: =35
-                                Size: =15
+                                Size: =10
                                 Text: ="Post your Answer here"
                                 Width: =585
                                 X: =148
@@ -1558,9 +1558,9 @@ Ask_Oues_Ans_Admin As screen:
 
                             Label4_5 As label:
                                 Fill: =RGBA(230, 230, 230, 1)
-                                FontWeight: =FontWeight.Bold
+                                FontWeight: =FontWeight.Semibold
                                 Height: =59
-                                Size: =14
+                                Size: =10
                                 Text: =" "&varSelectedQn_Admin.Title
                                 Width: =532
                                 X: =148
@@ -1698,13 +1698,12 @@ Ask_Oues_Ans_Admin As screen:
 
                         Label19_5 As label:
                             BorderColor: =RGBA(81, 82, 108, 1)
-                            BorderThickness: =0.1
                             Height: =104
                             OnSelect: =Select(Parent)
                             Overflow: =Overflow.Scroll
-                            Size: =10
+                            Size: =9
                             Text: =ThisItem.Title
-                            Width: =178
+                            Width: =224
                             X: =50
                             Y: =71
                             ZIndex: =1
@@ -1798,15 +1797,15 @@ Ask_Oues_Ans_Admin As screen:
                             Icon: =Icon.Trash
                             OnSelect: =Remove(AnswersList_Admin,ThisItem)
                             Width: =18
-                            X: =250
-                            Y: =154
+                            X: =256
+                            Y: =3
                             ZIndex: =10
 
                     Label12_7 As label:
                         Align: =Align.Center
                         Fill: =RGBA(255, 232, 231, 1)
                         Height: =35
-                        Size: =16
+                        Size: =12
                         Text: ="Recent answers"
                         Width: =290
                         Y: =61
